# hangman_in_TDD

./: CMakeLists.txt  README.md
include/: game.hpp  generateTextFromFile.hpp  word.hpp  wordGenerator.hpp
src/: game.cpp  generateTextFromFile.cpp  main.cpp  word.cpp  wordGenerator.cpp
textFiles/: animals.txt
uts/: gameTests.cpp  generateTextFromFileTests.cpp  wordGeneratorTests.cpp  wordTests.cpp
